# cpp-ml-examples

./: CMakeLists.txt
1-linear-function/: README.md  linear_function.hpp  main.cpp
2-computing-grads/: README.md  grads.hpp  main.cpp
3-linear-multivariable/: README.md  linear_multivariable_function.hpp  main.cpp
math/: matrix.hpp  numbers.hpp
